--- a/vignettes/analysis.Rmd
+++ b/vignettes/analysis.Rmd
@@ -21,7 +21,7 @@ vignette: >
   %\VignetteEngine{knitr::knitr}
 ---
 
-**This file contains the code for reproducing the results shown in the related manuscript (numbers, tables, figures). We obtained our results on 2023-09-22 using R version 4.3.0 (2023-04-21) running natively on a MacBook Pro (2020) with an Apple M1 chip, 16 GB memory, and the operating system macOS Ventura (version 13.5.2). The total computation time was around XXX hours.**
+**This file contains the code for reproducing the results shown in the related manuscript (numbers, tables, figures). We obtained our results on 2023-09-22 using R version 4.3.0 (2023-04-21) running natively on a MacBook Pro (2020) with an Apple M1 chip, 16 GB memory, and the operating system macOS Ventura (version 13.5.2). The total computation time was around 11 hours.**
 
 # Initialisation
 
@@ -120,7 +120,7 @@ The following chunk performs the external (`glmtrans`) and the internal simulati
 
 - input: none (*simulating data*)
 
-- execution time: **3 hours**
+- execution time: **2 + 1 = 3 hours**
 
 - output: results/sim_ext.RData, results/sim_int.RData, results/info_sim.RData
 
@@ -320,7 +320,7 @@ The following chunk performs the first external application (`GRridge`).
 
 - input: none (*script loads data - which are also available [here](https://github.com/markvdwiel/GRridge/blob/master/data/dataVerlaat.rda) - from the R package [`GRridge`](https://doi.org/10.18129/B9.bioc.GRridge)*)
 
-- execution time: **1.5 hours**
+- execution time: **2.5 hours**
 
 - output: results/app_grridge.RData, results/info_app_grridge.txt
 
@@ -357,7 +357,7 @@ The following chunk performs the second external application (`fwelnet`).
 
 - input: data/pone.0181468.s001.csv (*available from [Erez et al. 2017](https://doi.org/10.1371/journal.pone.0181468) in the supporting file [journal.pone.0181468.s001.csv](https://doi.org/10.1371/journal.pone.0181468.s001)*)
 
-- execution time: **20 minutes**
+- execution time: **0.5 hours**
 
 - output: results/app_fwelnet.RData, results/info_app_fwelnet.txt
 
