--- a/vignettes/abstract.Rmd
+++ b/vignettes/abstract.Rmd
@@ -43,7 +43,7 @@ In many high-dimensional prediction or classification tasks, complementary data 
 
 [ORBi: 10993/53227](https://orbilu.uni.lu/handle/10993/53227) ([pdf](https://orbilu.uni.lu/bitstream/10993/53227/1/transreg.pdf))
 
-```{r,echo=FALSE}
+```{r,eval=FALSE,echo=FALSE}
 knitr::include_url("https://arxiv.org/pdf/2212.08581.pdf")
 ```
 
