replace PDF by PNG

--- a/vignettes/analysis.Rmd
+++ b/vignettes/analysis.Rmd
@@ -70,7 +70,8 @@ The following chunk generates the figure for the methods section.
 
 ```{r calibration,echo=TRUE}
 #<<init>>
-grDevices::pdf(file=paste0(dir,"/manuscript/figure_example.pdf"),width=8,height=5,pointsize=15)
+#grDevices::pdf(file=paste0(dir,"/manuscript/figure_example.pdf"),width=8,height=5,pointsize=15)
+grDevices::png(file=paste0(dir,"/manuscript/figure_example.png"),width=8,height=5,units="in",pointsize=15,res=1200)
 
 set.seed(1)
 n <- 200; p <- 500
@@ -446,7 +447,8 @@ The following chunk generates the figure for both external applications (`GRridg
 - output: manuscript/figure_ext.pdf
 
 ```{r app_boxplots,echo=TRUE}
-grDevices::pdf(file=paste0(dir,"/manuscript/figure_ext.pdf"),width=8,height=6,pointsize=15)
+#grDevices::pdf(file=paste0(dir,"/manuscript/figure_ext.pdf"),width=8,height=6,pointsize=15)
+grDevices::png(file=paste0(dir,"/manuscript/figure_ext.png"),width=8,height=6,units="in",pointsize=15,res=1200)
 graphics::par(mfrow=c(2,1),mar=c(2.5,2.0,0.5,0.5))
 for(k in c("grridge","fwelnet")){
   file <- paste0(dir,"/results/app_",k,".RData")
@@ -625,7 +627,8 @@ number <- unique(sapply(loss,function(x) x$p))
 auc <- as.data.frame(t(sapply(loss,function(x) x$auc)))
 table <- lapply(auc,function(x) tapply(X=x,INDEX=list(frame$cutoff,frame$alpha),FUN=function(x) mean(x)))
 
-grDevices::pdf(file=paste0(dir,"/manuscript/figure_int.pdf"),width=8,height=6,pointsize=15)
+#grDevices::pdf(file=paste0(dir,"/manuscript/figure_int.pdf"),width=8,height=6,pointsize=15)
+grDevices::png(file=paste0(dir,"/manuscript/figure_int.png"),width=8,height=6,units="in",pointsize=15,res=1200)
 plotter(table,cutoff,number,horizontal=TRUE)
 grDevices::dev.off()
 ```
