--- a/vignettes/abstract.Rmd
+++ b/vignettes/abstract.Rmd
@@ -37,7 +37,7 @@ In many high-dimensional prediction or classification tasks, complementary data 
 
 # Full article (open access)
 
-Bioinformatics (In press): [doi: 10.1093/bioinformatics/btad680](https://10.1093/bioinformatics/btad680)
+Bioinformatics (In press): [doi: 10.1093/bioinformatics/btad680](https://doi.org/10.1093/bioinformatics/btad680)
 
 [arXiv: 2212.08581](https://arxiv.org/abs/2212.08581) ([pdf](https://arxiv.org/pdf/2212.08581.pdf))
 
