--- a/vignettes/abstract.Rmd
+++ b/vignettes/abstract.Rmd
@@ -37,12 +37,10 @@ In many high-dimensional prediction or classification tasks, complementary data 
 
 # Full article (open access)
 
-Rauschenberger et al. (2023). "Penalized regression with multiple sources of prior effects". *Bioinformatics* 39(12):btad680. [doi: 10.1093/bioinformatics/btad680](https://doi.org/10.1093/bioinformatics/btad680).
+Rauschenberger et al. (2023). "Penalized regression with multiple sources of prior effects". *Bioinformatics* 39(12):btad680. [doi: 10.1093/bioinformatics/btad680](https://doi.org/10.1093/bioinformatics/btad680). (Click [here](https://academic.oup.com/bioinformatics/pdf-lookup/doi/10.1093/bioinformatics/btad680) to download PDF.)
 
+<!--
 [arXiv: 2212.08581](https://arxiv.org/abs/2212.08581) ([pdf](https://arxiv.org/pdf/2212.08581.pdf))
 
 [ORBi: 10993/53227](https://orbilu.uni.lu/handle/10993/53227) ([pdf](https://orbilu.uni.lu/bitstream/10993/53227/1/BIOINF-2023-0644.pdf))
-
-```{r,eval=FALSE,echo=FALSE}
-knitr::include_url("https://arxiv.org/pdf/2212.08581.pdf")
-```
+-->
